--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
