--- a/package.json
+++ b/package.json
@@ -21,11 +21,19 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "autoprefixer": "^10.4.19",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "date-fns": "^3.6.0",
+    "exceljs": "^4.4.0",
     "firebase": "^10.12.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "ngx-captcha": "^13.0.0",
+    "postcss": "^8.4.39",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
+    "tailwindcss": "^3.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
